@@ -1,3 +1,5 @@
+[COLOR yellow][B]v1.1.3[/B][/COLOR]
+* Add setting to enable/disable notification for Force Addon Updates on Kodi startup. (תחזוקה - הצג הודעה של חיפוש העדכונים)
 [COLOR yellow][B]v1.1.2[/B][/COLOR]
 * Delay the "מחפש עדכוני הרחבות..." message for 4 seconds on Kodi startup.
 [COLOR yellow][B]v1.1.1[/B][/COLOR]
